[package]
name = "counter-smart-contract"
version = "0.1.0"
edition = "2021"

[lib]
name = "counter_smart_contract"
crate-type = ["cdylib", "lib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "1.5.0"
borsh-derive = "1.5.0"
solana-program = "1.18.14"
